# forellm

./: .dockerignore  .gitignore  AGENTS.md  API.md  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  LICENSE  MODELS.md  Makefile  README.md  flake.nix  index.html  install.sh  push-to-github.ps1  push-to-github.sh
.github/workflows/: release.yml
forellm-core/: Cargo.toml
forellm-core/src/: fit.rs  hardware.rs  plan.rs  providers.rs
forellm-desktop/: Cargo.toml  tauri.conf.json
forellm-desktop/capabilities/: default.json
forellm-desktop/src/: main.rs
forellm-desktop/ui/: index.html
forellm-gui/: electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
forellm-gui/cli/: agent-cli.ts
forellm-gui/docs/: AGENT_FORE_ARCHITECTURE.md  APP.md  TUTORIAL_LAUNCHER.md
forellm-gui/electron/: main.ts  preload.ts
forellm-gui/src/: App.tsx  env.d.ts  index.css
forellm-gui/src/components/: AgentFore.tsx  AgentForeToolbar.tsx  Dashboard.tsx  Documentation.tsx  FitBadge.tsx  GaugeChart.tsx  HardwarePanel.tsx  HardwareSimulator.tsx  Launcher.tsx  ModelExplorer.tsx  MultiModelCart.tsx  QuantizationMatrix.tsx  SystemTelemetry.tsx
forellm-gui/src/lib/: agentConfig.ts  types.ts
forellm-tui/: Cargo.toml
forellm-tui/src/: display.rs  main.rs  serve_api.rs  theme.rs  tui_app.rs  tui_ui.rs
scripts/: install-openclaw-skill.sh  round_logo.py  scrape_hf_models.py  test_api.py  update_models.sh  verify_models.py
skills/forellm-advisor/: SKILL.md
website/: Github.md  README.md  index.html
