[package]
name = "forellm-core"
version.workspace = true
edition = "2024"
authors = ["Emir Lima"]
description = "Core library for ForeLLM — hardware detection, model fitting, and provider integration"
license = "MIT"
repository = "https://github.com/emireln/forellm"
homepage = "https://github.com/emireln/forellm"
readme = "../README.md"
keywords = ["llm", "hardware", "inference", "models", "gpu"]
categories = ["hardware-support"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
ureq = { version = "3.2", features = ["json"] }
