[package]
name = "forellm-desktop"
version.workspace = true
edition = "2024"
authors = ["Emir Lima"]
description = "macOS desktop application for ForeLLM — visual LLM hardware fitting"
license = "MIT"
repository = "https://github.com/emireln/forellm"
homepage = "https://github.com/emireln/forellm"
default-run = "forellm-desktop"

[[bin]]
name = "forellm-desktop"
path = "src/main.rs"

[dependencies]
forellm-core = { path = "../forellm-core" }
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
