[package]
name = "forellm"
version.workspace = true
edition = "2024"
authors = ["Emir Lima"]
description = "Right-size LLM models to your system hardware. Interactive TUI and CLI to match models against available RAM, CPU, and GPU."
license = "MIT"
repository = "https://github.com/emireln/forellm"
homepage = "https://github.com/emireln/forellm"
readme = "../README.md"
keywords = ["llm", "tui", "hardware", "inference", "models"]
categories = ["command-line-utilities"]

[[bin]]
name = "forellm"
path = "src/main.rs"

[dependencies]
forellm-core = { version = "0.6.0", path = "../forellm-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
colored = "3.1"
ratatui = "0.30"
crossterm = "0.29"
axum = "0.8"
tokio = { version = "1.47", features = ["rt-multi-thread", "signal", "net"] }
